feat:项目打包-条件编译和网页端打包

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -48,6 +48,12 @@
   },
   /* 快应用特有相关 */
   "quickapp": {},
+  /* 网页端相关 */
+  "h5": {
+    "router": {
+      "base": "./"
+    }
+  },
   /* 小程序特有相关 */
   "mp-weixin": {
     "appid": "wx4c83205de718252c",
