--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "小兔鲜儿",
-  "appid": "",
+  "appid": "__UNI__748CA42",
   "description": "",
   "versionName": "1.0.0",
   "versionCode": 1,
